--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -29,15 +29,15 @@
 <div class="container text-center">
   <div class="row">
     <div class="col-md-3">
-      <h3>Users: </h3><h4 class="btn btn-success">{{nbOfUsers}}</h4>
+      <h3>Users: </h3><h4 class="btn btn-success"><a routerLink="/admin/users">{{nbOfUsers}}</a></h4>
     </div>
 
     <div class="col-md-3">
-      <h3>Companies: </h3><h4 class="btn btn-warning">{{nbOfCompanies}}</h4>
+      <h3>Companies: </h3><h4 class="btn btn-warning"><a routerLink="/admin/companies">{{nbOfCompanies}}</a></h4>
     </div>
 
     <div class="col-md-3">
-      <h3>Jobs: </h3><h4 class="btn btn-danger">{{nbOfJobs}}</h4>
+      <h3>Jobs: </h3><h4 class="btn btn-danger"><a routerLink="/admin/jobs">{{nbOfJobs}}</a></h4>
     </div>
 
     <div class="col-md-3">
