--- a/src/app/companies/company-profile/company-profile.component.html
+++ b/src/app/companies/company-profile/company-profile.component.html
@@ -28,7 +28,9 @@
     <div class="col-sm-3">
       <!--left col-->
       <div class="text-center">
-        <img src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail" alt="avatar">
+          <img *ngIf="company.photo === ''" src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail"
+          alt="avatar">
+        <img *ngIf="company.photo !== ''" src="{{company.photo}}" class="avatar img-circle img-thumbnail" alt="avatar">
         <h6>Upload a different photo...</h6>
         <input type="file" name="resume" id="resume" class="text-center center-block file-upload" (change)="upload($event)"
           accept=".png, .jpeg, .jpg">
