--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -52,6 +52,7 @@
         </div>
         <div class="card-body">
           <h5 class="card-title">{{item.type}}</h5>
+          <p class="card-text">Company: {{item.company.name}}</p>
           <p class="card-text">${{item.salary}}</p>
           <button class="btn btn-primary" *ngIf="!item.applied" (click)="apply(item)">Apply</button>
           <button class="btn btn-success" disabled *ngIf="item.applied">Applied</button>
@@ -65,6 +66,9 @@
 <div *ngIf="isCompany">
   <div class="container">
     <div class="row">
+        <div *ngIf="successMessage !== null" class="col-md-12 alert alert-success">
+            <strong>Success!</strong> {{successMessage}}
+          </div>
       <div class="col-md-4">
         <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Create Job</button>
       </div>
@@ -92,7 +96,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-success">Add Job</button>
+            <button type="submit" class="btn btn-success" (click)="addJob()" data-dismiss="modal">Add Job</button>
           </div>
         </form>
       </div>
