Bug fixes and validators and added user jobs

--- a/src/app/users/user-applies/user-applies.component.html
+++ b/src/app/users/user-applies/user-applies.component.html
@@ -11,7 +11,10 @@
         <a class="nav-link btn btn-outline-secondary" routerLink="/user/profile">Profile</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link btn btn-outline-secondary" routerLink="/user/jobs">Applied Jobs</a>
+        <a class="nav-link btn btn-outline-secondary" routerLink="/user/applies">Applied Jobs</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link btn btn-outline-secondary" routerLink="/user/jobs">My Jobs</a>
       </li>
       <li class="nav-item">
         <a class="nav-link btn btn-outline-secondary" routerLink="/user/interviews">Interviews</a>
