--- a/src/app/users/user-profile/user-profile.component.html
+++ b/src/app/users/user-profile/user-profile.component.html
@@ -8,10 +8,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link btn btn-outline-secondary" routerLink="/user/profile">Profile <span class="sr-only">(current)</span></a>
+        <a class="nav-link btn btn-outline-secondary" routerLink="/user/profile">Profile</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link btn btn-outline-secondary" routerLink="/user/jobs">Applied Jobs</a>
+        <a class="nav-link btn btn-outline-secondary" routerLink="/user/applies">Applied Jobs</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link btn btn-outline-secondary" routerLink="/user/jobs">My Jobs</a>
       </li>
       <li class="nav-item">
         <a class="nav-link btn btn-outline-secondary" routerLink="/user/interviews">Interviews</a>
