--- a/src/app/users/users-jobs/users-jobs.component.html
+++ b/src/app/users/users-jobs/users-jobs.component.html
@@ -6,14 +6,14 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul *ngIf="isUser" class="navbar-nav mr-auto">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link btn btn-outline-secondary" routerLink="/user/profile">Profile</a>
       </li>
       <li class="nav-item">
         <a class="nav-link btn btn-outline-secondary" routerLink="/user/applies">Applied Jobs</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link btn btn-outline-secondary" routerLink="/user/jobs">My Jobs</a>
       </li>
       <li class="nav-item">
@@ -23,63 +23,55 @@
         <a class="nav-link btn btn-outline-secondary" routerLink="/user/search">Search Jobs</a>
       </li>
     </ul>
-    <ul *ngIf="isCompany" class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link btn btn-outline-secondary" routerLink="/company/profile">Profile</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link btn btn-outline-secondary" routerLink="/company/jobs">My Jobs</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link btn btn-outline-secondary" routerLink="/company/interviews">Interviews</a>
-      </li>
-    </ul>
     <form class="form-inline my-2 my-lg-0">
       <button class="btn btn-outline-danger my-2 my-sm-0" (click)="logout()">Logout</button>
     </form>
   </div>
 </nav>
 
+
+
 <div class="container">
-  <h2 class="text-center">Welcome to Seekers {{userName}}!</h2>
-</div>
-
-<!--User interface-->
-<div *ngIf="isUser">
-  <div class="container">
-  <h3 class="text-center">Jobs</h3>
-  <div *ngIf="jobs?.length > 0" class="row">
-      <div *ngFor="let item of jobs" class="card border-light mb-3" style="width: 18rem;">
-        <div class="card-header">
-          <h4>{{item.title}}</h4>
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">{{item.type}}</h5>
-          <p class="card-text">Company: {{item.company.name}}</p>
-          <p class="card-text">${{item.salary}}</p>
-          <button class="btn btn-primary" *ngIf="!item.applied" (click)="apply(item)">Apply</button>
-          <button class="btn btn-success" disabled *ngIf="item.applied">Applied</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!--Company interface-->
-<div *ngIf="isCompany">
-  <div class="container">
     <div class="row">
         <div *ngIf="successMessage !== null" class="col-md-12 alert alert-success">
             <strong>Success!</strong> {{successMessage}}
           </div>
-          <div *ngIf="errorMessage !== null" class="col-md-12 alert alert-danger">
-            <strong>Error!</strong> {{errorMessage}}
-          </div>
       <div class="col-md-4">
         <button type="button" class="btn btn-info btn-lg" (click)="fillModal()" data-toggle="modal" data-target="#myModal">Create Job</button>
       </div>
+
+    </div>
+    </div>
+
+
+<div class="container">
+    <h2 class="text-center">My Jobs</h2>
+  <div *ngIf="jobs?.length > 0" class="row">
+    <div *ngFor="let item of jobs" class="card border-light mb-3" style="width: 18rem;">
+      <div class="card-header">
+        <h4>{{item.title}}</h4>
+      </div>
+      <div class="card-body">
+        <p class="card-text">{{item.details}}</p>
+      </div>
     </div>
   </div>
+</div>
+
+<div class="container">
+    <h2 class="text-center">Users Jobs</h2>
+  <div *ngIf="jobs?.length > 0" class="row">
+    <div *ngFor="let item of jobs" class="card border-light mb-3" style="width: 18rem;">
+      <div class="card-header">
+        <h4>{{item.title}}</h4>
+      </div>
+      <div class="card-body">
+        <p class="card-text">{{item.details}}</p>
+      </div>
+    </div>
+  </div>
+</div>
+
 
   <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
@@ -91,21 +83,20 @@
           <h4 class="modal-title">Create a Job</h4>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
+        <form class="form-signin" #jobForm="ngForm" (ngSubmit)="addJob(jobForm)">
           <div class="modal-body">
             <input type="text" name="title" #title="ngModel" [(ngModel)]="job.title" class="form-control" placeholder="Job Title"
               required autofocus>
-            <input type="text" name="type" #type="ngModel" [(ngModel)]="job.type" class="form-control" placeholder="Job Type"
-              required>
-            <input type="number" name="salary" #salary="ngModel" [(ngModel)]="job.salary" class="form-control"
-              placeholder="Job Salary" required>
+            <textarea name="details" #details="ngModel" [(ngModel)]="job.details" class="form-control" placeholder="Job Details"
+              required></textarea>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             <button type="submit" class="btn btn-success" (click)="addJob()" data-dismiss="modal">Add Job</button>
           </div>
+        </form>
       </div>
 
     </div>
   </div>
 
-</div>
