--- a/src/app/companies/company-register/company-register.component.html
+++ b/src/app/companies/company-register/company-register.component.html
@@ -27,7 +27,7 @@
       <span id="reauth-email" class="reauth-email"></span>
       <input type="text" id="company-name" name="name" #name="ngModel" [(ngModel)]="company.name" class="form-control"
         placeholder="Company Name" required autofocus>
-      <input type="email" id="inputEmail" name="email" #email="ngModel" [(ngModel)]="company.email" class="form-control"
+      <input type="email" id="inputEmail" name="email" #email="ngModel" email [(ngModel)]="company.email" class="form-control"
         placeholder="Email address" required>
       <input type="password" id="inputPassword" name="password" #password="ngModel" [(ngModel)]="company.password"
         class="form-control" placeholder="Password" required>
