--- a/src/app/users/user-login/user-login.component.html
+++ b/src/app/users/user-login/user-login.component.html
@@ -27,7 +27,7 @@
     <p id="profile-name" class="profile-name-card"></p>
     <form class="form-signin" #signInForm="ngForm" (ngSubmit)="signin(signInForm)">
       <span id="reauth-email" class="reauth-email"></span>
-      <input type="email" id="inputEmail" name="email" #email="ngModel" [(ngModel)]="user.email" class="form-control"
+      <input type="email" id="inputEmail" name="email" #email="ngModel" email [(ngModel)]="user.email" class="form-control"
         placeholder="Email address" required autofocus ngModel email>
       <input type="password" id="inputPassword" class="form-control" name="password" #password="ngModel" [(ngModel)]="user.password"
         placeholder="Password" required>
