--- a/src/app/users/user-register/user-register.component.html
+++ b/src/app/users/user-register/user-register.component.html
@@ -27,7 +27,7 @@
       <span id="reauth-email" class="reauth-email"></span>
       <input type="text" id="full-name" class="form-control" name="fname" #fname="ngModel" [(ngModel)]="user.fullName"
         placeholder="Full Name" required autofocus>
-      <input type="email" id="inputEmail" name="email" #email="ngModel" [(ngModel)]="user.email" class="form-control"
+      <input type="email" id="inputEmail" name="email" #email="ngModel" email [(ngModel)]="user.email" class="form-control"
         placeholder="Email address" required>
       <input type="password" id="inputPassword" class="form-control" name="password" #password="ngModel" [(ngModel)]="user.password"
         placeholder="Password" required>
