--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -55,7 +55,7 @@
         </div>
         <div class="card-body">
           <h5 class="card-title">{{item.type}}</h5>
-          <p class="card-text">Company: {{item.company.name}}</p>
+          <p class="card-text">Company: {{item.companyId}}</p>
           <p class="card-text">${{item.salary}}</p>
           <button class="btn btn-primary" *ngIf="!item.applied" (click)="apply(item)">Apply</button>
           <button class="btn btn-success" disabled *ngIf="item.applied">Applied</button>
