added user register,login,profile and company-create jobs

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -41,7 +41,7 @@
 </nav>
 
 <div class="container">
-  <h2 class="text-center">Welcome to Seekers {{userName}}!</h2>
+  <h2 class="text-center">Welcome to Seekers, {{userName}}!</h2>
 </div>
 
 <!--User interface-->
