--- a/src/app/users/user-profile/user-profile.component.html
+++ b/src/app/users/user-profile/user-profile.component.html
@@ -103,12 +103,12 @@
               <br>
               <input type="file" name="resume" id="resume" (change)="upload($event, 'resume')" accept=".pdf, .doc, .docx" />
             </div>
-            <div *ngIf="user.resume !== ''" class="form-group col-sm-6">
+            <div *ngIf="user.resume !== undefined && user.resume !== ''" class="form-group col-sm-6">
               <label for="password2">
                 <h4>Resume Uploaded</h4>
               </label>
               <br>
-              <a class="btn btn-info" href="{{user.resume}}">Download resume</a>
+              <a *ngIf="user.resume !== undefined && user.resume !== ''" class="btn btn-info" href="{{user.resume}}">Download resume</a>
             </div>
             <div class="form-group col-sm-12">
               <button class="btn btn-lg btn-success" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Save</button>
