--- a/src/app/users/user-register/user-register.component.html
+++ b/src/app/users/user-register/user-register.component.html
@@ -25,7 +25,7 @@
     <br>
     <form class="form-signin" #registerForm="ngForm" (ngSubmit)="register(registerForm)">
       <span id="reauth-email" class="reauth-email"></span>
-      <input type="text" id="full-name" class="form-control" name="fname" #fname="ngModel" [(ngModel)]="user.fullName"
+      <input type="text" id="full-name" class="form-control" name="fullName" #fullName="ngModel" [(ngModel)]="user.fullName"
         placeholder="Full Name" required autofocus>
       <input type="email" id="inputEmail" name="email" #email="ngModel" email [(ngModel)]="user.email" class="form-control"
         placeholder="Email address" required>
