--- a/src/app/companies/company-profile/company-profile.component.html
+++ b/src/app/companies/company-profile/company-profile.component.html
@@ -28,15 +28,15 @@
     <div class="col-sm-3">
       <!--left col-->
       <div class="text-center">
-          <img *ngIf="company.photo === ''" src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail"
+          <img *ngIf="company.photo === undefined || company.photo !== ''" src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail"
           alt="avatar">
-        <img *ngIf="company.photo !== ''" src="{{company.photo}}" class="avatar img-circle img-thumbnail" alt="avatar">
+        <img *ngIf="company.photo !== undefined && company.photo !== ''" src="{{company.photo}}" class="avatar img-circle img-thumbnail" alt="avatar">
         <h6>Upload a different photo...</h6>
         <input type="file" name="resume" id="resume" class="text-center center-block file-upload" (change)="upload($event)"
           accept=".png, .jpeg, .jpg">
       </div>
       <hr><br>
-      <div class="card">
+      <div class="card" *ngIf="company.website !== undefined && company.photo !== ''">
         <div class="card-header">
           Website <i class="fa fa-link fa-1x"></i>
         </div>
