--- a/src/app/users/user-profile/user-profile.component.html
+++ b/src/app/users/user-profile/user-profile.component.html
@@ -34,9 +34,9 @@
     <div class="col-sm-3">
       <!--left col-->
       <div class="text-center">
-        <img *ngIf="user.photo === ''" src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail"
+        <img *ngIf="user.photo === undefined || user.photo === ''" src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail"
           alt="avatar">
-        <img *ngIf="user.photo !== ''" src="{{user.photo}}" class="avatar img-circle img-thumbnail" alt="avatar">
+        <img *ngIf="user.photo !== undefined && user.photo !== ''" src="{{user.photo}}" class="avatar img-circle img-thumbnail" alt="avatar">
         <h6>Upload a different photo...</h6>
         <input type="file" name="resume" id="resume" class="text-center center-block file-upload" (change)="upload($event, 'photo')"
           accept=".png, .jpeg, .jpg">
