--- a/src/app/users/user-applies/user-applies.component.html
+++ b/src/app/users/user-applies/user-applies.component.html
@@ -31,28 +31,28 @@
 <div class="container">
   <h2 class="text-center">Applied Jobs</h2>
 </div>
-<div *ngIf="appliedJobs.length === 0" class="container">
+<div *ngIf="!appliedJobs" class="container">
   <h3 class="text-center">You haven't applied for any job yet :(</h3>
 </div>
-<div *ngIf="appliedJobs.length !== 0" class="container">
+<div *ngIf="appliedJobs" class="container">
   <div class="table-responsive">
-  <table class="table table-hover table-striped table-light">
-    <thead class="thead-light">
-      <tr>
-        <th scope="col">Title</th>
-        <th scope="col">Company</th>
-        <th scope="col">Job Type</th>
-        <th scope="col">Salary</th>
-      </tr>
-    </thead>
-    <tbody *ngFor="let item of appliedJobs">
-      <tr>
-        <td>{{item.title}}</td>
-        <td><a [routerLink]="['/user/company', item.company.id, 'profile']">{{item.company.name}}</a></td>
-        <td>{{item.type}}</td>
-        <td>${{item.salary}}</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+    <table class="table table-hover table-striped table-light">
+      <thead class="thead-light">
+        <tr>
+          <th scope="col">Title</th>
+          <th scope="col">Company</th>
+          <th scope="col">Job Type</th>
+          <th scope="col">Salary</th>
+        </tr>
+      </thead>
+      <tbody *ngFor="let item of appliedJobs">
+        <tr>
+          <td>{{item.title}}</td>
+          <td><a [routerLink]="['/user/company', item.company.id, 'profile']">{{item.company.name}}</a></td>
+          <td>{{item.type}}</td>
+          <td>${{item.salary}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
