--- a/src/app/users/user/user.component.html
+++ b/src/app/users/user/user.component.html
@@ -13,9 +13,9 @@
     <li class="nav-item">
       <a class="nav-link btn btn-outline-secondary" routerLink="/user/applies">Applied Jobs</a>
     </li>
-    <li class="nav-item">
+<!--     <li class="nav-item">
       <a class="nav-link btn btn-outline-secondary" routerLink="/user/jobs">My Jobs</a>
-    </li>
+    </li> -->
     <li class="nav-item">
       <a class="nav-link btn btn-outline-secondary" routerLink="/user/interviews">Interviews</a>
     </li>
