--- a/src/app/companies/company-interviews/company-interviews.component.html
+++ b/src/app/companies/company-interviews/company-interviews.component.html
@@ -42,8 +42,8 @@
     <tbody *ngFor="let item of interviews">
       <tr>
         <td><a [routerLink]="['/company/user', item.userId, 'profile']">{{item.user.fullName}}</a></td>
-        <td>{{item.date |  date:'MM/dd/yyyy hh:mm a'}}</td>
-          <td *ngIf="item.decision === ''"><button class="btn btn-secondary" disabled>No Decision Yet</button></td>
+        <td>{{item.date |  date:'MM/dd/yyyy'}}</td>
+          <td *ngIf="item.decision === 'not yet'"><button class="btn btn-secondary" disabled>No Decision Yet</button></td>
           <td *ngIf="item.decision === 'accepted'"><button class="btn btn-success" disabled>Accepted</button></td>
           <td *ngIf="item.decision === 'declined'"><button class="btn btn-danger" disabled>Declined</button></td>
       </tr>
