--- a/src/app/users/user-interviews/user-interviews.component.html
+++ b/src/app/users/user-interviews/user-interviews.component.html
@@ -13,9 +13,9 @@
       <li class="nav-item">
         <a class="nav-link btn btn-outline-secondary" routerLink="/user/applies">Applied Jobs</a>
       </li>
-      <li class="nav-item">
+<!--       <li class="nav-item">
         <a class="nav-link btn btn-outline-secondary" routerLink="/user/jobs">My Jobs</a>
-      </li>
+      </li> -->
       <li class="nav-item active">
         <a class="nav-link btn btn-outline-secondary" routerLink="/user/interviews">Interviews</a>
       </li>
@@ -47,9 +47,9 @@
     </thead>
     <tbody *ngFor="let item of interviews">
       <tr>
-        <td><a [routerLink]="['/user/company', item.company.$key, 'profile']">{{item.company.name}}</a></td>
+        <td><a [routerLink]="['/user/company', item.company._id, 'profile']">{{item.company.name}}</a></td>
         <td>{{item.date |  date:'MM/dd/yyyy hh:mm a'}}</td>
-        <td *ngIf="item.decision === ''"><button class="btn btn-success" (click)="decide(item, 'accepted')">Accept</button>&nbsp;
+        <td *ngIf="item.decision === 'not yet'"><button class="btn btn-success" (click)="decide(item, 'accepted')">Accept</button>&nbsp;
           <button class="btn btn-danger" (click)="decide(item, 'declined')">Decline</button></td>
           <td *ngIf="item.decision === 'accepted'"><button class="btn btn-success" disabled>Accepted</button></td>
           <td *ngIf="item.decision === 'declined'"><button class="btn btn-danger" disabled>Declined</button></td>
